fix: spacing issues

--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ code {
     color: white;
     display: inline-block;
     font-size: 1rem;
-    padding: 2rem;
+    padding: 1rem;
     width: 80%;
     margin: auto;
 }
